[metadata]
name = embryo
description = Embryo renderer scaffold engine
long_description = file: README.md
version = 0.1
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/embryo.git
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License

[options]
scripts = 
	bin/embryo
	bin/embryo2
packages = 
	find:
install_requires = 
	appyratus
	pytest
	ipdb

