[metadata]
name = embryo
description = Embryo renderer scaffold engine
long_description = file: README.md
long_description_content_type = text/markdown
version = 2
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/embryo.git
classifiers = 
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: MIT License

[options]
scripts = 
	bin/embryo
packages = find:
install_requires = 
	appyratus
	pytest
	ipdb

