[metadata]
name = embryo
description = Embryo renderer scaffold engine
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.0
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/embryo.git
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
scripts = 
	bin/embryo
	bin/hatch
packages = find:
install_requires = 
	ravel
	appyratus
	tabulate
	pytest
	ipdb

